deploy/k8s/multi/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unla
  namespace: unla
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /gateway
            pathType: Prefix
            backend:
              service:
                name: mcp-gateway
                port:
                  number: 5235
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 5234
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
